--- a/source/css/by.global.less
+++ b/source/css/by.global.less
@@ -186,8 +186,13 @@ hr {
   text-align: center;
 }
 
-.by_main, .by_footer {
+.by_main,
+.by_footer {
   animation: bottom-top 1s;
+}
+
+.by_footer span {
+  display: inline !important;
 }
 
 .img_cover {
@@ -208,8 +213,9 @@ hr {
   transition: all .5s;
 
 
-  &_config_show, &_config_hide {
-    > button {
+  &_config_show,
+  &_config_hide {
+    >button {
       display: block;
       margin-bottom: 5px;
       width: 35px;
@@ -283,7 +289,8 @@ hr {
         background: var(--sidebar-bg);
         transition: all .5s;
 
-        ul, li {
+        ul,
+        li {
           list-style: none;
         }
 
@@ -333,7 +340,8 @@ hr {
           list-style: none;
 
 
-          a, i {
+          a,
+          i {
             color: var(--font-color);
             font-size: 1rem;
           }
@@ -424,6 +432,97 @@ hr {
 
     }
 
+    .by_local_search {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 200;
+      display: none;
+      background: rgba(0, 0, 0, 0.6);
+
+      .by_search_dialog {
+        position: fixed;
+        top: 5rem;
+        left: 50%;
+        z-index: 1001;
+        margin-left: -15rem;
+        padding: 1.5rem 1rem;
+        width: 35rem;
+        border-radius: 8px;
+        background: var(--search-bg);
+        animation: titleScale 0.5s;
+
+        .by_search_title {
+          padding: 0 0 0.7rem;
+          color: #49b1f5;
+          font-size: 1.2rem;
+          line-height: 1;
+        }
+
+        input {
+          padding: 0.25rem 0.7rem;
+          width: 100%;
+          outline: 0;
+          border: 2px solid #49b1f5;
+          border-radius: 2rem;
+          background: var(--search-bg);
+          color: var(--search-input-color);
+          -webkit-appearance: none;
+          font-family: var(--global-font-family);
+        }
+
+        hr {
+          margin: 1.2rem auto;
+        }
+
+        .search_close {
+          position: absolute;
+          top: 1rem;
+          right: 1rem;
+          color: #858585;
+          font-size: 1.4em;
+          line-height: 1;
+          cursor: pointer;
+          transition: color 0.2s ease-in-out;
+        }
+
+        // 标签修饰
+        .by_tag {
+          background-color: #F9EBEA;
+          margin: 5px 5px;
+          padding: 14px 8px;
+          display: inline-flex;
+          line-height: 0;
+          font-size: .5rem;
+          font-weight: 500;
+          border-radius: 5px;
+          cursor: pointer;
+          box-shadow: 0 3px 5px rgb(0 0 0 / 12%);
+          color: #34495e;
+
+          span {
+            margin-left: 5px;
+            margin-right: -2px;
+            font-size: 0.5rem;
+          }
+        }
+      }
+
+      @media screen and(max-width: 700px) {
+        .by_search_dialog {
+          position: fixed;
+          top: 5rem;
+          left: 7.5vw;
+          margin-left: 0;
+          z-index: 1001;
+          width: 85vw;
+          border-radius: 8px;
+        }
+      }
+    }
+
   }
 
   &_nav {
@@ -512,7 +611,8 @@ hr {
 
   }
 
-  &_search, &_toggle_menu {
+  &_search,
+  &_toggle_menu {
     display: inline;
   }
 
@@ -525,7 +625,8 @@ hr {
   &_menus {
     display: inline;
 
-    &, li {
+    &,
+    li {
       list-style: none;
     }
   }
@@ -679,7 +780,7 @@ hr {
       }
 
       &_wrap {
-        > div {
+        >div {
           display: inline-flex;
           align-items: center;
         }
@@ -711,6 +812,25 @@ hr {
       }
 
     }
+
+    .by_comment {
+      &_title {
+        font-size: 1.43em;
+        font-weight: 700;
+  
+        .by-font {
+          font-size: larger;
+        }
+  
+      }
+
+      &_subtitle {
+        color: var(--font-subcolor);
+        font-size: .5em;
+        font-weight: 500;
+      }
+    }
+    
   }
 
   /*! 侧边栏 */
@@ -816,7 +936,21 @@ hr {
 
     .by_catalogue {
       .toc {
-        padding: 0 1rem;
+        // padding: 0 1rem;
+
+        .toc-list {
+          padding-left: 10px;
+        }
+
+        .is-collapsed {
+          max-height: 0 !important;
+        }
+
+        .is-collapsible {
+          max-height: 1000px;
+          overflow: hidden;
+          transition: all .3s ease-in-out;
+        }
 
         .toc-link {
           display: block;
@@ -954,7 +1088,7 @@ hr {
     width: 100%;
     margin: 0 auto;
     padding: 1.3rem 2rem;
-    color: #909399;
+    color: #fff;
     background: rgba(255, 255, 255, .15);
     backdrop-filter: blur(3px);
     transition: all .3s;
@@ -964,6 +1098,7 @@ hr {
     }
 
     a {
+      color: #fff;
       margin: 0 5px;
     }
 
@@ -1011,9 +1146,14 @@ hr {
       }
     }
 
-    .active a {
+    .active span {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border-radius: 8px;
       background: #00c4b6;
       color: var(--white);
+      cursor: pointer;
     }
 
   }
@@ -1023,29 +1163,19 @@ hr {
 
   /*! 首页 */
 
-  &_index {
+  &_index {}
 
-  }
+  &_archives {}
 
-  &_archives {
+  &_categories {}
 
-  }
+  &_tag {}
 
-  &_categories {
+  &_post {}
 
-  }
+  &_journals {}
 
-  &_tag {
-
-  }
-
-  &_post {
-
-  }
-
-  &_journals {
-
-  }
+  &_search {}
 
 }
 
@@ -1100,7 +1230,8 @@ html #Butterfly {
     box-shadow: none;
   }
 
-  code, pre {
+  code,
+  pre {
     font-family: "Fira Code", "Fira Mono", Menlo, Consolas, "DejaVu Sans Mono", monospace;
   }
 
@@ -1205,7 +1336,8 @@ html #Butterfly {
       }
     }
 
-    .by_code_copy, .by_code_expander {
+    .by_code_copy,
+    .by_code_expander {
       position: absolute;
       top: 5px;
       right: 10px;
@@ -1240,7 +1372,3 @@ html #Butterfly {
 
   }
 }
-
-
-
-
