--- a/source/css/by.theme.less
+++ b/source/css/by.theme.less
@@ -14,10 +14,11 @@ html  {
   --hlexpand-bg: linear-gradient(180deg, rgba(246, 248, 250, 0.6), rgba(246, 248, 250, 0.9));
   /*! -------------- */
 
-  --global-font-family: "Butterfly Font", BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Lato, Roboto, "PingFang SC", "Microsoft JhengHei", "Microsoft YaHei", sans-serif;
+  --global-font-family: "Butterfly Font",Optima-Regular, Optima, -apple-system, system-ui, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial;
   --global-font-size: 14px;
   --global-bg: #fff;
   --font-color: #4c4948;
+  --font-subcolor: #9b9b9b;
   --hr-border: #a4d8fa;
   --search-bg: #f6f8fa;
   --search-input-color: #4c4948;
@@ -50,6 +51,9 @@ html  {
   --scrollbar-color: #49b1f5;
   --background-toc: rgba(255, 255, 255, 0.95);
   --box-shadow-toc: inset 20px 0 30px 0 #dadada, 1px 2px 10px 0 #a8a8a8;
+  --table-bg: #f2f6fc;
+  --table-thead: #ebeef5;
+  --table-border: 1px solid #dcdcdc;
 
   --light_bg_color: hsla(0, 0%, 100%, 0.6);
   --dark_bg_color: rgba(18, 18, 18, 0.8);
@@ -103,6 +107,8 @@ html  {
     --timeline-bg: #1f1f1f;
     --box-shadow-toc: inset 0 0 30px 0 rgba(253, 253, 253, 0.34), 1px 2px 10px 0 #181818;
     --background-toc: rgba(35, 35, 35, 0.98);
+    --table-bg: #303030;
+    --table-thead: #414243;
   }
 
 
