--- a/source/css/by.categories.less
+++ b/source/css/by.categories.less
@@ -2,7 +2,7 @@
 .by_categories {
   .by_category {
     background-color: #F9EBEA;
-    margin: 10px 10px;
+    margin: 10px;
     padding: 19px 14px;
     display: inline-flex;
     line-height: 0;
