--- a/source/css/by.global.less
+++ b/source/css/by.global.less
@@ -537,6 +537,7 @@ hr {
     font-size: 1.3em;
     transition: all .5s;
     animation: headerNoOpacity 1s;
+    justify-content: space-between;
 
     a {
       color: var(--light-grey);
@@ -544,7 +545,6 @@ hr {
   }
 
   &_blog_title {
-    flex: 1;
     text-shadow: 2px 2px 4px rgb(0 0 0 / 15%);
     font-weight: bold;
   }
@@ -586,11 +586,13 @@ hr {
     &_title {
       font-size: 2.85em;
       color: var(--white);
+      text-shadow: 0 0 5px #000000;
     }
 
     &_subtitle {
       font-size: 1.72em;
       color: var(--light-grey);
+      text-shadow: 0 0 3px #000000;
     }
 
     &_social_icons {
