优化顶部栏和底部栏的暗黑模式

--- a/source/css/by.global.less
+++ b/source/css/by.global.less
@@ -1090,8 +1090,8 @@ hr {
     width: 100%;
     margin: 0 auto;
     padding: 1.3rem 2rem;
-    color: #fff;
-    background: rgba(255, 255, 255, .15);
+    color: var(--font-color);
+    background: var(--top-nav-bg);
     backdrop-filter: blur(3px);
     transition: all .3s;
 
@@ -1100,7 +1100,7 @@ hr {
     }
 
     a {
-      color: #fff;
+      color: var(--font-color);
       margin: 0 5px;
     }
 
@@ -1210,7 +1210,7 @@ html #Butterfly {
     position: fixed;
     top: -60px;
     z-index: 91;
-    background: rgba(255, 255, 255, .8);
+    background: var(--top-nav-bg);
     box-shadow: 0 5px 6px -5px rgb(133 133 133 / 60%);
     transition: transform .2s ease-in-out, opacity .2s ease-in-out;
 
