--- a/source/css/by.theme.less
+++ b/source/css/by.theme.less
@@ -19,6 +19,7 @@ html  {
   --global-bg: #fff;
   --font-color: #4c4948;
   --font-subcolor: #9b9b9b;
+  --top-nav-bg: #fff;
   --hr-border: #a4d8fa;
   --search-bg: #f6f8fa;
   --search-input-color: #4c4948;
@@ -68,7 +69,9 @@ html  {
   //暗黑模式
   &[data-theme=dark] {
     --global-bg: #0d0d0d;
-    --font-color: rgba(255, 255, 255, 0.7);
+    --top-nav-bg: #0d0d0d;
+    --font-color: #eee;
+    --font-subcolor: #9b9b9b;
     --hr-border: rgba(255, 255, 255, 0.4);
     --hr-before-color: rgba(255, 255, 255, 0.7);
     --search-bg: #121212;
