--- a/source/css/by.links.less
+++ b/source/css/by.links.less
@@ -27,12 +27,13 @@
     gap: 30px;
   
     .by_link_card {
-      border-radius: 0 0 29px 5px;
-      //border: 1px #f8f8f8 solid;
+      border-radius: 10px;
+      border: 1px #f8f8f8 solid;
       overflow: hidden;
 
       &:hover {
         box-shadow: var(--card-hover-box-shadow);
+        transform: translateY(-5px);
 
         img {
           animation: bounce-down 1.6s linear infinite;
